# 655-lab1-raytracer

./: CMakeLists.txt  RenderCompCreator.cpp  RenderCompCreator.h  Scene.cpp  Scene.h  main.cpp  smallpt.cpp
Materials/: BaseMaterial.cpp  BaseMaterial.h
Materials/MaterialComponent/: MatCompFileD.cpp  MatCompFileD.h  MatCompFileDouble.cpp  MatCompFileDouble.h  MatCompFileV3.cpp  MatCompFileV3.h  MatCompFileVec3.h  MatCompSolid.cpp  MatCompSolid.h  MatCompSolidV3.cpp  MatCompSolidV3.h  MatComponent.cpp  MatComponent.h
Model/: Model.h  RenderCompCreator.cpp  RenderCompCreator.h
Model/File/: ImageFile.cpp  ImageFile.h  ImageFileManager.cpp  ImageFileManager.h  PPMFileManager.cpp  PPMFileManager.h
Model/File/Reader/: PPMFileReader.cpp  PPMFileReader.h  ReadImageStrategy.cpp  ReadImageStrategy.h
Model/File/Writer/: ImageFileWriter.cpp  ImageFileWriter.h  PPMFileReader.cpp  PPMFileReader.h  PPMFileWriter.cpp  PPMFileWriter.h  WriteImageStrategy.cpp  WriteImageStrategy.h
Model/Material/: MatCompSolid.cpp  MatCompSolid.h  MatComponent.cpp  MatComponent.h
Model/MaterialComponent/: MatCompFileVec3.cpp  MatCompFileVec3.h  MatCompSolid.cpp  MatCompSolid.h  MatComponent.cpp
Model/Ops/: LinAlgOp.h  RenderOps.cpp  RenderOps.h
Model/Render/: RenderAlg.cpp  RenderAlg.h
Model/Render/Materials/: Material.cpp  Material.h
Model/Scene/: Cam.cpp  Cam.h
Model/Scene/Light/: AmbientLight.cpp  AmbientLight.h  DirectionLight.cpp  DirectionLight.h  Light.cpp  Light.h
Model/Scene/RenderObj/: Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Model/Vec/: CoordinateSpace.cpp  CoordinateSpace.h  Ray.cpp  Ray.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
Model/VecModel/: OffVec.cpp  OffVec.h  Ray.h  Vec.cpp  Vec.h  Vec3.cpp  Vec3.h
Ops/: LinAlgOp.cpp  LinAlgOp.h  Ops.h  RenderOps.cpp  RenderOps.h
Render/: Integrator.cpp  Integrator.h  PathTracer.cpp  PathTracer.h  Phong.cpp  Phong.h  RenderAlg.h  RenderController.cpp  RenderController.h
Render/IntersectMethods/: BruteForce.cpp  BruteForce.h  IntersectTreeNode.cpp  IntersectTreeNode.h  MediumSplit.cpp  MediumSplit.h  ObjTracker.cpp  ObjTracker.h
Render/Materials/: Material.cpp  Material.h  MaterialSolid.cpp  MaterialSolid.h
Scene/: Cam.cpp  Cam.h  Scene.cpp  Scene.h
Scene/IntersectMethods/: BruteForce.cpp  BruteForce.h  ObjTracker.cpp  ObjTracker.h  SceneIntersect.cpp  SceneIntersect.h
Scene/Light/: AmbientLight.cpp  AmbientLight.h  DirectionLight.cpp  DirectionLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
Scene/Materials/: BaseMaterial.h  Material.cpp  Material.h
Scene/RenderObj/: AxisAlignBox.cpp  AxisAlignBox.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Scene/RenderObj/Light/: AmbientLight.cpp  AmbientLight.h  DirectionLight.cpp  DirectionLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
