cmake_minimum_required(VERSION 3.17)
project(655_lab1_raytracer)

set(CMAKE_CXX_STANDARD 14)

include_directories(Model)
include_directories(Model/File)
include_directories(Model/MaterialComponent)
include_directories(Model/Ops)
include_directories(Model/Vec)
include_directories(Render)
include_directories(Scene)
include_directories(Render/IntersectMethods)
include_directories(Scene/RenderObj/Light)
include_directories(Scene/Materials)
include_directories(Scene/RenderObj)

add_executable(655_lab1_raytracer
        Model/File/Writer/ImageFileWriter.cpp
        Model/File/Writer/ImageFileWriter.h
        Model/File/Writer/PPMFileReader.cpp
        Model/File/Writer/PPMFileReader.h
        Model/MaterialComponent/MatComponent.cpp
        Model/MaterialComponent/MatComponent.h
        Model/MaterialComponent/MatCompSolid.cpp
        Model/MaterialComponent/MatCompSolid.h
        Model/Ops/LinAlgOp.cpp
        Model/Ops/LinAlgOp.h
        Model/Ops/RenderOps.cpp
        Model/Ops/RenderOps.h
        Model/Vec/CoordinateSpace.cpp
        Model/Vec/CoordinateSpace.h
        Model/Vec/Ray.cpp
        Model/Vec/Ray.h
        Model/Vec/Vec3.cpp
        Model/Vec/Vec3.h
        Model/RenderCompCreator.cpp
        Model/RenderCompCreator.h
        Render/Integrator.cpp
        Render/Integrator.h
        Render/Phong.cpp
        Render/Phong.h
        Render/RenderController.cpp
        Render/RenderController.h
        Render/IntersectMethods/ObjTracker.cpp
        Render/IntersectMethods/ObjTracker.h
        Scene/RenderObj/Light/AmbientLight.cpp
        Scene/RenderObj/Light/AmbientLight.h
        Scene/RenderObj/Light/DirectionLight.cpp
        Scene/RenderObj/Light/DirectionLight.h
        Scene/RenderObj/Light/Light.cpp
        Scene/RenderObj/Light/Light.h
        Scene/RenderObj/Light/PointLight.cpp
        Scene/RenderObj/Light/PointLight.h
        Scene/Materials/BaseMaterial.cpp
        Scene/Materials/BaseMaterial.h
        Scene/RenderObj/Object.cpp
        Scene/RenderObj/Object.h
        Scene/RenderObj/Plane.cpp
        Scene/RenderObj/Plane.h
        Scene/RenderObj/Sphere.cpp
        Scene/RenderObj/Sphere.h
        Scene/RenderObj/Triangle.cpp
        Scene/RenderObj/Triangle.h
        Scene/Cam.cpp
        Scene/Cam.h
        Scene/Scene.cpp
        Scene/Scene.h
        main.cpp Render/IntersectMethods/BruteForce.cpp
        Render/IntersectMethods/BruteForce.h
        Scene/RenderObj/AxisAlignBox.cpp
        Scene/RenderObj/AxisAlignBox.h
        Render/IntersectMethods/IntersectTreeNode.cpp
        Render/IntersectMethods/IntersectTreeNode.h
        Render/IntersectMethods/MediumSplit.cpp
        Render/IntersectMethods/MediumSplit.h)
